# vyatta-nat

./: .frlog  .gitignore  COPYING  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
lib/: SrcNatRule.pm
lib/VyOS/: Nptv6Rule.pm
lib/Vyatta/: DstNatRule.pm  NatRule.pm  NatRuleCommon.pm  SrcNatRule.pm
scripts/: VyattaNatRule.pm  vyatta-clear-nat  vyatta-clear-nat-counters.pl  vyatta-nat-translations.pl  vyatta-show-nat-rules.pl  vyatta-show-nat-statistics.pl  vyatta-show-nat.pl  vyatta-update-bidirectional-nat.pl  vyatta-update-dst-nat.pl  vyatta-update-nat.pl  vyatta-update-src-nat.pl  vyos-update-nptv6.pl
templates-cfg/nat/: node.def
templates-cfg/nat/bidirectional/: node.def
templates-cfg/nat/bidirectional/rule/node.tag/inbound-address/: node.def
templates-cfg/nat/bidirectional/rule/node.tag/interface/: node.def
templates-cfg/nat/bidirectional/rule/node.tag/outbound-address/: node.def
templates-cfg/nat/destination/: node.def
templates-cfg/nat/destination/rule/: node.def
templates-cfg/nat/nptv6/: node.def
templates-cfg/nat/nptv6/rule/node.tag/source/: node.def
templates-cfg/nat/rule/node.tag/disable/: node.def
templates-cfg/nat/rule/node.tag/exclude/: node.def
templates-cfg/nat/rule/node.tag/inbound-interface/: node.def
templates-cfg/nat/rule/node.tag/inside-address/: node.def
templates-cfg/nat/rule/node.tag/outbound-interface/: node.def
templates-cfg/nat/source/: node.def
templates-cfg/service/nat/: node.def
templates-cfg/service/nat/rule/: node.def
templates-op/clear/nat/: node.def
templates-op/clear/nat/counters/: node.def
templates-op/clear/nat/counters/rule/: node.def
templates-op/clear/nat/destination/: node.def
templates-op/clear/nat/destination/counters/: node.def
templates-op/clear/nat/source/: node.def
templates-op/clear/nat/source/counters/: node.def
templates-op/clear/nat/translations/: node.def
templates-op/show/nat/: node.def
templates-op/show/nat/destination/: node.def
templates-op/show/nat/destination/rules/: node.def
templates-op/show/nat/destination/statistics/: node.def
templates-op/show/nat/destination/translations/: node.def
templates-op/show/nat/rules/: node.def
templates-op/show/nat/source/: node.def
templates-op/show/nat/source/rules/: node.def
templates-op/show/nat/source/statistics/: node.def
templates-op/show/nat/source/translations/: node.def
templates-op/show/nat/statistics/: node.def
templates-op/show/nat/translations/: node.def
templates-op/show/nat/translations/destination/: node.def
templates-op/show/nat/translations/detail/: node.def
templates-op/show/nat/translations/monitor/: node.def
templates-op/show/nat/translations/source/: node.def
xsl/: show_nat_rules.xsl  show_nat_statistics.xsl  url-decode.xsl
(+94 files in other folders)
